<resources>
    <string name="app_name">Login App</string>
    <string name="enter_username">Enter Username</string>
    <string name="login">App Login Room Database</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pin">PIN</string>
    <string name="edit_data_login">Edit Data Login</string>
    <string name="detail_data_login">Detail Data Login</string>
    <string name="edit">Edit Data</string>
    <string name="menu">Menu</string>
    <string name="maysaroh_niken_ayu_saraswati">Maysaroh Niken Ayu Saraswati</string>
</resources>