<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EditLoginActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/edit_data_login"
        android:textAllCaps="true"
        android:textColor="@color/textColorButton"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_user_name_text_input_layout"
        style="@style/TextInputLayoutBoxColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/edit_password_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/enter_username"
            android:hint="@string/enter_username"
            android:inputType="textPersonName|textAutoComplete"
            android:padding="@dimen/_8sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_input_layout"
        style="@style/TextInputLayoutBoxColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/edit_pin_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_user_name_text_input_layout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/enter_password"
            android:hint="@string/enter_password"
            android:inputType="textVisiblePassword|numberPassword|textPassword|textAutoComplete"
            android:padding="@dimen/_8sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_pin_input_layout"
        style="@style/TextInputLayoutBoxColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pin"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/editData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_input_layout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/enter_pin"
            android:hint="@string/enter_pin"
            android:inputType="number|textAutoComplete"
            android:padding="@dimen/_8sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/editData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="editData"
        android:padding="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/edit"
        android:textColor="@color/textColorButton"
        app:layout_constraintEnd_toStartOf="@id/deleteData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pin_input_layout" />

    <TextView
        android:id="@+id/deleteData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="deleteData"
        android:padding="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/textColorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editData"
        app:layout_constraintTop_toBottomOf="@id/edit_pin_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>